# stewart-platform-ball

./: CMakeLists.txt  README.md  main.cpp
py/: main.py
python/: Main.py  MyPID.py  PlatformPoseControl.py  PlatformVisualAnalysis.py  main.py  main1.py  main2.py
